@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-19
+2014-06-30 Mikhail S. Dubrovin
+- NDArrIOV1 - add constructor to load ndarray from file with metadata, w/o default initialization
+- test/ex_ndarrio.cpp - add test for new constructor 
+- test/test.data TYPE -> DTYPE
+	
 Tag: V00-05-18
 2014-06-13 Mikhail S. Dubrovin
 - in SConscript add DOCGEN="doxy-all psana-modules-doxy"
